src/index.css
:root {
    --primary: #cebdff;
    --on-primary: #380095;
    --primary-container: #5100cf;
    --on-primary-container: #e8ddff;

    --primary-fixed: #e8ddff;
    --primary-fixed-dim: #cebdff;
    --on-primary-fixed: #20005e;
    --on-primary-fixed-variant: #5100cf;

    --secondary: #d6bee5;
    --on-secondary: #3a2948;
    --secondary-container: #524060;
    --on-secondary-container: #f1daff;

    --secondary-fixed: #f1daff;
    --secondary-fixed-dim: #d6bee5;
    --on-secondary-fixed: #241432;
    --on-secondary-fixed-variant: #524060;

    --tertiary: #e7b7e8;
    --on-tertiary: #46234a;
    --tertiary-container: #5e3962;
    --on-tertiary-container: #ffd6fe;

    --tertiary-fixed: #ffd6fe;
    --tertiary-fixed-dim: #e7b7e8;
    --on-tertiary-fixed: #2e0d34;
    --on-tertiary-fixed-variant: #5e3962;

    --error: #ffb4ab;
    --on-error: #690005;
    --error-container: #93000a;
    --on-error-container: #ffdad6;

    --background: #14121c;
    --on-background: #e7e0ef;

    --surface: #14121c;
    --surface-dim: #14121c;
    --surface-bright: #3b3743;

    --surface-container-lowest: #0f0d17;
    --surface-container-low: #1d1a24;
    --surface-container: #211e29;
    --surface-container-high: #2b2833;
    --surface-container-highest: #36333e;

    --on-surface: #e7e0ef;
    --surface-variant: #494551;
    --on-surface-variant: #cac4d2;

    --outline: #948e9c;
    --outline-variant: #494551;

    --shadow: #000000;
    --scrim: #000000;

    --inverse-surface: #e7e0ef;
    --inverse-on-surface: #322f3a;
    --inverse-primary: #6a1eff;

    --source-color: #441aa1;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: Arial;
    color: var(--on-surface);
}

body {
    margin: 0;
    width: 100vw;
    height: 100vh;
}

#root {
    width: 100vw;
    height: 100vh;
}

::-webkit-scrollbar {
    width: 10px; /* Width of vertical scrollbar */
    height: 10px; /* Height of horizontal scrollbar */
}

button {
    cursor: pointer;
}
.main {
    background-color: var(--surface-container-lowest);
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
}

.bar {
    position: fixed;
    background-color: var(--surface-container-low);
    width: 100vw;
    height: 64px;
    display: flex;
    align-items: center;
    padding: 8px;
    padding-inline: 20px;
}

.main-logo {
    width: 172px;
    margin-right: 8px;
}

button {
    border: none;
}

.bar-button {
    height: 100%;
    background-color: transparent;
    color: var(--on-surface);
    margin-inline: 16px;
    font-size: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.2s ease-in-out;
    font-weight: 600;
}

.bar-button:hover {
    color: var(--primary);
}

.page-button {
    height: 72px;
    width: 256px;
    background-color: var(--surface-container-low);
    color: var(--on-surface);
    margin: 32px;
    font-size: 28px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.2s ease-in-out;
    font-weight: 600;
    border-radius: 16px;
}

.page-button:hover {
    color: var(--on-primary);
    background-color: var(--primary);
}

.horizontal-spacer {
    flex-grow: 1;
}

.github-icon {
    font-size: 48px;
    color: var(--on-surface);
    transition: color 0.2s ease;
}

.github-btn:hover .github-icon {
    color: var(--primary);
}

.text-primary-color {
    color: var(--primary);
}

.content {
    height: 1000px;
    background-color: var(--surface-container-lowest);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main-heading {
    margin-top: 100px;
    font-size: 60px;
}

.card-row {
    width: 100%;
    display: flex;
    align-items: stretch;
    gap: 16px;
    height: 400px;
    padding-top: 8px;
    padding-inline: 8vw;
}

.card {
    flex: 1;

    background-color: var(--surface-container-low);

    border-radius: 16px;
    padding: 16px;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.card-image-container {
    width: 100%;
    height: 200px;
    border-radius: 8px;
    background-color: var(--surface-container);
    margin-bottom: 8px;
}

.card-text {
    text-align: left;
    margin-bottom: 4px;
}

.card-paragraph {
    font-size: 18px;
}

.card-image {
    object-fit: cover;
    width: 100%;
    height: 100%;
    border-radius: 8px;
}

